Fixing playlist height on small viewport,
adding gap and hiding hr element.

--- a/app/components/Playlist.module.scss
+++ b/app/components/Playlist.module.scss
@@ -1,8 +1,8 @@
 .playlist {
 	width: 100%;
-	min-height: 400px;
+	height: fit-content;
 	max-height: 400px;
-	overflow-x: auto;
+	overflow-y: auto;
 	grid-column: 1;
 	grid-row: 1;
 	padding: 0.5rem;
@@ -12,8 +12,14 @@
 		height: fit-content;
 		display: grid;
 		grid-template-columns: 1fr 1fr;
+		gap: 0.5rem;
+
+		hr {
+			display: none;
+		}
 
 		.video {
+			max-height: 90px;
 			display: flex;
 			gap: 0.125rem;
 			position: relative;
@@ -24,6 +30,7 @@
 				padding-right: 8px;
 				overflow-y: auto;
 				scrollbar-width: thin;
+				line-height: 1.25rem;
 			}
 		}
 
@@ -65,9 +72,22 @@
 		min-height: 100%;
 		max-height: 100%;
 
+		&.visible {
+			height: calc(100vh - 80px);
+		}
+
+		&.hidden {
+			height: 100vh;
+		}
+
 		.container {
 			display: flex;
 			flex-direction: column;
+			gap: 0;
+
+			hr {
+				display: block;
+			}
 		}
 	}
 }
